[package]
name = "shim-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
# zksync_da_clients = { path = "../zksync-era/core/node/da_clients" }
# eq-service = { path = "../eq-service/service" }
zksync_web3_decl = { path = "../zksync-era/core/lib/web3_decl" }
zksync_eth_client = { path = "../zksync-era/core/lib/eth_client" }
zksync_basic_types = { path = "../zksync-era/core/lib/basic_types" }
tokio = { version = "1", features = ["full"] }
